.k8s/apps/linkwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/version: 2.5.3
    helm.sh/chart: linkwarden-0.3.3
  name: linkwarden
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: linkwarden
      app.kubernetes.io/name: linkwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: linkwarden
        app.kubernetes.io/name: linkwarden
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: SPACES_KEY
              valueFrom:
                secretKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: linkwarden-s3
            - name: SPACES_SECRET
              valueFrom:
                secretKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: linkwarden-s3
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: uri
                  name: linkwarden-db
            - name: OPENROUTER_MODEL
              valueFrom:
                secretKeyRef:
                  key: OPENROUTER_MODEL
                  name: openrouter-secrets
            - name: OPENROUTER_API_KEY
              valueFrom:
                secretKeyRef:
                  key: OPENROUTER_API_KEY
                  name: openrouter-secrets
            - name: SPACES_FORCE_PATH_STYLE
              value: 'true'
          image: ghcr.io/linkwarden/linkwarden:v2.13.5@sha256:1588811d7b7d249d387782bb94c7eb189082b82b542ac1667d2ac3d7e7f70ce6
          imagePullPolicy: IfNotPresent
          name: linkwarden
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 2.5Gi
            requests:
              cpu: 100m
              memory: 256Mi
      serviceAccountName: linkwarden
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.103
    lbipam.cilium.io/sharing-key: linkwarden
  labels:
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/version: 2.5.3
    helm.sh/chart: linkwarden-0.3.3
  name: linkwarden
  namespace: apps
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/name: linkwarden
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/version: 2.5.3
    helm.sh/chart: linkwarden-0.3.3
  name: linkwarden
  namespace: apps
spec:
  rules:
    - host: linkwarden.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - linkwarden.josevictor.me
      secretName: wildcard-tls
